--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: "3"
 services:
   #
-  # Verdaccio : artifact repository
+  # Nexus : code artifact and docker images repository
   #
+  #nexus:
+  #  image: sonatype/nexus3
+  #  ports:
+  #    - "8081:8081"
+  #  environment:
+  #    - VIRTUAL_HOST=nexus.local
+  
   verdaccio:
-    image: verdaccio/verdaccio
+    image: verdaccio/verdaccio:latest
     ports:
       - "4873:4873"
+    volumes:
+      - bin-data:/verdaccio
     environment:
       - VIRTUAL_HOST=verdaccio.local
+
   #
   # Sonar : static code analysis
   #
@@ -20,8 +30,8 @@ services:
     environment:
       - VIRTUAL_HOST=sonar.local
       - VIRTUAL_PORT=9000
-      - sonar.jdbc.username=postgres
-      - sonar.jdbc.password=example
+      - sonar.jdbc.username=sonarqube
+      - sonar.jdbc.password=sonarqube
       - sonar.jdbc.url=jdbc:postgresql://postgres:5432/sonarqube 
     depends_on:
       - postgres
@@ -39,7 +49,7 @@ services:
       - VIRTUAL_HOST=jenkins.local
       - VIRTUAL_PORT=8080
     volumes:
-      - ./data/jenkins:/var/jenkins_home #Remember that, the tmp directory is designed to be wiped on system reboot.
+      - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
   #
   # Gitea : git source code repository
@@ -47,13 +57,16 @@ services:
   gitea:
     image: gitea/gitea:1.3.2
     volumes:
-      - ./data/gitea:/data
+      - ./data/gitea:/data/gitea
+      - ssh-data:/data/ssh
+      - ./data/gitea/git:/data/git
     ports:
-      - "3000:3000"
+      - "8082:3000"
       - "222:22"
     depends_on:
       - postgres
     restart: always
+    privileged: true
     environment:
       - VIRTUAL_HOST=gitea.local
       - VIRTUAL_PORT=3000
@@ -65,8 +78,8 @@ services:
       - DB_TYPE=postgres
       - DB_HOST=postgres:5432
       - DB_NAME=gitea
-      - DB_USER=postgres
-      - DB_PASSWD=example
+      - DB_USER=gitea
+      - DB_PASSWD=gitea
     links:
       - postgres
      
@@ -78,10 +91,9 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: example
-      POSTGRES_MULTIPLE_DATABASES: gitea, sonarqube
     volumes:
-      - ./data/pg/:/var/lib/postgresql/data
-      - ./data/db/:/docker-entrypoint-initdb.d
+      - pg-data:/var/lib/postgresql/data
+      - ./data/pg/entrypoint:/docker-entrypoint-initdb.d
   #
   # DB admin interface
   #
@@ -107,3 +119,13 @@ services:
       - ./data/www/:/usr/share/nginx/html
     environment:
       - VIRTUAL_HOST=www.local
+      
+volumes:
+  pg-data:
+    driver: local
+  ssh-data:
+    driver: local
+  jenkins-data:
+    driver: local
+  bin-data:
+    driver: local
