--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
   # Gitea : git source code repository
   #
   gitea:
-    image: gitea/gitea:1.3.2
+    image: gitea/gitea
     volumes:
       - ./data/gitea:/data/gitea
       - ssh-data:/data/ssh
