--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
   #    - "8081:8081"
   #  environment:
   #    - VIRTUAL_HOST=nexus.local
-  
+  #  depends_on:
+  #    - nginx
+
   verdaccio:
     image: verdaccio/verdaccio:latest
     ports:
@@ -18,6 +20,8 @@ services:
       - bin-data:/verdaccio
     environment:
       - VIRTUAL_HOST=verdaccio.local
+    depends_on:
+      - nginx
 
   #
   # Sonar : static code analysis
@@ -32,9 +36,10 @@ services:
       - VIRTUAL_PORT=9001
       - sonar.jdbc.username=sonarqube
       - sonar.jdbc.password=sonarqube
-      - sonar.jdbc.url=jdbc:postgresql://postgres:5432/sonarqube 
+      - sonar.jdbc.url=jdbc:postgresql://postgres:5432/sonarqube
     depends_on:
       - postgres
+      - nginx
   #
   # Jenkins: Continuous Integration Platform
   #
@@ -48,6 +53,8 @@ services:
     environment:
       - VIRTUAL_HOST=jenkins.local
       - VIRTUAL_PORT=8080
+    depends_on:
+      - nginx
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
@@ -65,6 +72,7 @@ services:
       - "222:22"
     depends_on:
       - postgres
+      - nginx
     restart: always
     privileged: true
     environment:
@@ -82,7 +90,7 @@ services:
       - DB_PASSWD=gitea
     links:
       - postgres
-     
+
   #
   # Postgres database
   #
@@ -106,20 +114,28 @@ services:
       - VIRTUAL_HOST=adminer.local
     depends_on:
       - postgres
+      - nginx
+  #
   # reverse proxy
+  #
   nginx:
     image: jwilder/nginx-proxy
     ports:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+  #
+  # static home page
+  #
   www:
     image: nginx
-    volumes: 
+    volumes:
       - ./data/www/:/usr/share/nginx/html
     environment:
       - VIRTUAL_HOST=www.local
-      
+    depends_on:
+      - nginx
+
 volumes:
   pg-data:
     driver: local
