--- a/apps/apm-ssr/package.json
+++ b/apps/apm-ssr/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-server": "~10.0.7",
     "@angular/router": "~10.0.7",
     "@nguniversal/express-engine": "^10.0.1",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
+    "helmet": "^3.23.3",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -35,10 +37,12 @@
     "@angular/cli": "~10.0.5",
     "@angular/compiler-cli": "~10.0.7",
     "@nguniversal/builders": "^10.0.1",
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
-    "@types/node": "^14.0.27",
+    "@types/helmet": "0.0.47",
     "@types/jasmine": "~3.5.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
