--- a/apps/apm-ssr/package.json
+++ b/apps/apm-ssr/package.json
@@ -16,18 +16,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.7",
+    "@angular/cdk": "^10.1.1",
     "@angular/common": "~10.0.7",
     "@angular/compiler": "~10.0.7",
     "@angular/core": "~10.0.7",
     "@angular/forms": "~10.0.7",
+    "@angular/material": "^10.1.1",
     "@angular/platform-browser": "~10.0.7",
     "@angular/platform-browser-dynamic": "~10.0.7",
     "@angular/platform-server": "~10.0.7",
     "@angular/router": "~10.0.7",
+    "@elastic/apm-rum": "^5.3.0",
+    "@elastic/apm-rum-angular": "^1.1.4",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@nguniversal/express-engine": "^10.0.1",
+    "angular-oauth2-oidc": "^10.0.3",
+    "browser-bunyan": "^1.5.3",
+    "bunyan": "^1.8.14",
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
+    "elastic-apm-node": "^3.6.1",
     "express": "^4.15.2",
     "helmet": "^3.23.3",
+    "ngx-localstorage": "^3.0.0",
+    "ngx-popper": "^7.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
