--- a/apps/apm-ssr/package.json
+++ b/apps/apm-ssr/package.json
@@ -10,65 +10,65 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run apm-ssr:serve-ssr",
     "serve:ssr": "node dist/apm-ssr/server/main.js",
-    "build:ssr": "ng build --prod && ng run apm-ssr:server:production",
+    "build:ssr": "ng build --configuration production && ng run apm-ssr:server:production",
     "prerender": "ng run apm-ssr:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.7",
-    "@angular/cdk": "^10.1.1",
-    "@angular/common": "~10.0.7",
-    "@angular/compiler": "~10.0.7",
-    "@angular/core": "~10.0.7",
-    "@angular/forms": "~10.0.7",
-    "@angular/material": "^10.1.1",
-    "@angular/platform-browser": "~10.0.7",
-    "@angular/platform-browser-dynamic": "~10.0.7",
-    "@angular/platform-server": "~10.0.7",
-    "@angular/router": "~10.0.7",
-    "@elastic/apm-rum": "^5.3.0",
-    "@elastic/apm-rum-angular": "^1.1.4",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@nguniversal/express-engine": "^10.0.1",
+    "@angular/animations": "~12.2.12",
+    "@angular/cdk": "^12.2.12",
+    "@angular/common": "~12.2.12",
+    "@angular/compiler": "~12.2.12",
+    "@angular/core": "~12.2.12",
+    "@angular/forms": "~12.2.12",
+    "@angular/material": "^12.2.12",
+    "@angular/platform-browser": "~12.2.12",
+    "@angular/platform-browser-dynamic": "~12.2.12",
+    "@angular/platform-server": "~12.2.12",
+    "@angular/router": "~12.2.12",
+    "@elastic/apm-rum": "^5.9.1",
+    "@elastic/apm-rum-angular": "^2.1.1",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@nguniversal/express-engine": "^12.1.3",
     "angular-oauth2-oidc": "^10.0.3",
     "browser-bunyan": "^1.5.3",
     "bunyan": "^1.8.14",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
-    "elastic-apm-node": "^3.6.1",
+    "elastic-apm-node": "^3.23.0",
     "express": "^4.15.2",
     "helmet": "^3.23.3",
-    "ngx-localstorage": "^3.0.0",
+    "ngx-localstorage": "^3.4.0",
     "ngx-popper": "^7.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.7",
-    "@nguniversal/builders": "^10.0.1",
+    "@angular-devkit/build-angular": "~12.2.12",
+    "@angular/cli": "~12.2.12",
+    "@angular/compiler-cli": "~12.2.12",
+    "@nguniversal/builders": "^12.1.3",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.47",
-    "@types/jasmine": "~3.5.12",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.6",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "~6.1.3",
-    "typescript": "~3.9.5"
+    "typescript": "~4.3.5"
   }
 }
