--- a/apps/kibana/Dockerfile
+++ b/apps/kibana/Dockerfile
@@ -1,5 +1,5 @@
 # https://www.elastic.co/guide/en/kibana/current/docker.html
-FROM docker.elastic.co/kibana/kibana-oss:7.10.2
+FROM docker.elastic.co/kibana/kibana:7.15.1
 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
