--- a/apps/logstash/Dockerfile
+++ b/apps/logstash/Dockerfile
@@ -1,5 +1,5 @@
 # https://www.elastic.co/guide/en/logstash/current/docker.html
-FROM docker.elastic.co/logstash/logstash-oss:7.10.2
+FROM docker.elastic.co/logstash/logstash:7.15.1
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
