chore(angular): add angular-eslint

--- a/apps/apm-ssr/angular.json
+++ b/apps/apm-ssr/angular.json
@@ -171,9 +171,21 @@
           "configurations": {
             "production": {}
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "apm-ssr"
+  "defaultProject": "apm-ssr",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
