--- a/apps/apm-ssr/package.json
+++ b/apps/apm-ssr/package.json
@@ -48,6 +48,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^13.0.3",
     "@angular-devkit/build-angular": "~13.0.1",
     "@angular-eslint/builder": "12.6.1",
     "@angular-eslint/eslint-plugin": "12.6.1",
@@ -60,21 +61,16 @@
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.47",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
-    "codelyzer": "^6.0.0",
     "eslint": "^7.26.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.6",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jest": "^27.5.1",
+    "jest-preset-angular": "11.1.1",
+    "ng-mocks": "^13.0.4",
     "protractor": "~7.0.0",
+    "ts-jest": "^27.0.7",
     "ts-node": "~8.10.2",
     "tslint": "~6.1.3",
     "typescript": "~4.4.4"
