--- a/apps/apm-ssr/package.json
+++ b/apps/apm-ssr/package.json
@@ -28,19 +28,18 @@
     "@angular/router": "~13.0.0",
     "@elastic/apm-rum": "^5.9.1",
     "@elastic/apm-rum-angular": "^2.1.1",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nguniversal/express-engine": "^13.0.0",
-    "angular-oauth2-oidc": "^10.0.3",
+    "angular-oauth2-oidc": "^13.0.1",
     "browser-bunyan": "^1.5.3",
     "bunyan": "^1.8.14",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "elastic-apm-node": "^3.23.0",
-    "express": "^4.15.2",
+    "express": "^4.17.3",
     "helmet": "^3.23.3",
-    "ngx-localstorage": "^3.4.0",
     "ngx-popper": "^7.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
@@ -50,11 +49,11 @@
   "devDependencies": {
     "@angular-builders/jest": "^13.0.3",
     "@angular-devkit/build-angular": "~13.0.1",
-    "@angular-eslint/builder": "12.6.1",
-    "@angular-eslint/eslint-plugin": "12.6.1",
-    "@angular-eslint/eslint-plugin-template": "12.6.1",
-    "@angular-eslint/schematics": "12.6.1",
-    "@angular-eslint/template-parser": "12.6.1",
+    "@angular-eslint/builder": "^13.1.0",
+    "@angular-eslint/eslint-plugin": "^13.1.0",
+    "@angular-eslint/eslint-plugin-template": "^13.1.0",
+    "@angular-eslint/schematics": "^13.1.0",
+    "@angular-eslint/template-parser": "^13.1.0",
     "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.0",
     "@nguniversal/builders": "^13.0.0",
@@ -63,16 +62,21 @@
     "@types/helmet": "0.0.47",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "eslint": "^7.26.0",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "@typescript-eslint/parser": "5.12.1",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsdoc": "^37.9.4",
+    "eslint-plugin-rxjs": "^5.0.2",
     "jest": "^27.5.1",
     "jest-preset-angular": "11.1.1",
     "ng-mocks": "^13.0.4",
+    "prettier": "^2.5.1",
     "protractor": "~7.0.0",
     "ts-jest": "^27.0.7",
     "ts-node": "~8.10.2",
-    "tslint": "~6.1.3",
     "typescript": "~4.4.4"
   }
 }
